--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -44,4 +44,7 @@
     <dimen name="ticker_text_top_padding">2dp</dimen>
     <dimen name="ticker_text_end_padding">10dp</dimen>
 
+   <!-- QS detail view scrolling -->
+   <dimen name="qs_detail_item_height_twoline">72dp</dimen>
+
 </resources>
