--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2377,6 +2377,7 @@
         <item>restart</item>
         <item>recovery</item>
         <item>screenshot</item>
+        <item>screenrecord</item>
         <item>torch</item>
         <item>airplane</item>
         <item>settings</item>
