Introduce Keypress Boost
Common cases of jank are button and key presses.
So it is useful to introduce a boost which intercepts key
presses and applies fine tuned boost patterns based on the key/button
type.

A boost pattern consists of a boost duration and device/chipset
specific boost params.

Keypress Boost allows specifying a weak and a strong boost pattern.
The weak boost pattern is applied to common button presses.
Soft buttons and hardware buttons are handled in this implementation.
Additionally we send a weak keypress boost for the media play event
to minimize the media startup latency and for the "enter" event from
a keyboard.

A strong Keypress Boost is dispatched for the power button press and
for the camera.

The defined boost patterns for Keypress Boost can be used for other
boosting features which would be dependant on Keypress Boost.

Change-Id: I3554e38dc4bed68ce189c86c493c3aad9fa801d2
Signed-off-by: Alex Naidis <alex.naidis@linux.com>
Signed-off-by: Joe Maples <joe@frap129.org>
Signed-off-by: AmolAmrit <amol.amrit03@outlook.com>

--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -83,4 +83,9 @@
   platform signatures, specifically for use on devices with a vendor partition. -->
   <java-symbol type="array" name="config_vendorPlatformSignatures" />
 
+  <!-- Keypress Boost -->
+  <java-symbol type="bool" name="config_enableKeypressBoost" />
+  <java-symbol type="array" name="keypressboost_strong_param_value" />
+  <java-symbol type="array" name="keypressboost_weak_param_value" /> 
+
 </resources>
