--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -25,4 +25,7 @@
     <dimen name="qs_page_indicator_margin_bottom">12dp</dimen>
     <dimen name="qs_paged_tile_layout_padding_bottom">4dp</dimen>
 
+    <!-- Recent Lock Padding -->
+    <dimen name="recents_task_view_header_lock_button_padding">48dp</dimen>
+
 </resources>
