--- a/packages/SystemUI/res/values/projekt_colors.xml
+++ b/packages/SystemUI/res/values/projekt_colors.xml
@@ -31,12 +31,12 @@
     <!-- QS edit page background color -->
     <color name="qs_edit_item_decoration_bg">@*android:color/secondary_device_default_settings_light</color>
 
-    <!-- Power save warning color -->
-    <color name="powersave_warning_color">#ffff0000</color> <!-- red -->
-
-    <!-- Screen pinning colors -->
+    <!-- Screen pinning layout -->
     <color name="screen_pinning_background_color">@*android:color/accent_device_default_light</color>
-    <color name="screen_pinning_positive_text_color">@android:color/white</color>
-    <color name="screen_pinning_negative_text_color">@android:color/white</color>
+    <color name="screen_pinning_title_text">@android:color/white</color>
+    <color name="screen_pinning_description_text">@android:color/white</color>
+    <color name="screen_pinning_button_text">@android:color/white</color>
+    <color name="screen_pinning_bg_circ_color">#40FFFFFF</color>
+    <color name="screen_pinning_nav_icon_hightlight_outer_color">@android:color/white</color>
 
 </resources>
