--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -28,4 +28,10 @@
     <!-- Recent Lock Padding -->
     <dimen name="recents_task_view_header_lock_button_padding">48dp</dimen>
 
+    <!-- Floating action button -->
+    <dimen name="floating_action_button_height">54dp</dimen>
+    <dimen name="floating_action_button_width">54dp</dimen>
+    <dimen name="floating_action_button_translation_z">12dp</dimen>
+    <dimen name="floating_action_button_margin_side">32dp</dimen>
+    <dimen name="floating_action_button_margin_bottom">46dp</dimen>
 </resources>
