fwb: Seperate statusbar from tuner and launch externally ExTunerSettings style by beanstown106
Change-Id: I2443364d87ece83f52399566e4cd137d9aada3ba
xyyx: Adapted for O
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/packages/SystemUI/res/values/colt_strings.xml
+++ b/packages/SystemUI/res/values/colt_strings.xml
@@ -46,4 +46,6 @@
     <!-- PiP Tile -->
     <string name="quick_settings_pip_label">PiP</string>
 
+    <string name="statusbar_items_title">Statusbar items</string>
+
 </resources>
