DUI: Initial checkin for Oreo [5/7]
Squashed commit of the following:

Manually bring in

DUI: Migrate to API/Permission model for Editor [1/5]
https://github.com/bigrushdog/android_frameworks_base/commit/20681de6a18ef2e1851d66c095658a4f1479c054

commit d3dd2b5df493989f3bbb479a5734df3a84d9598a
Author: bigrushdog <randall.rushing@gmail.com>
Date:   Fri Aug 11 18:15:22 2017 -0700

    DUtils: Migrate from broadcasts to API for some action handling [1/2]

    Protected broadcasts for ActionHandler actions will become problematic
    in the future. Currently, broadcasts are sent from SystemUI as well as
    system server (hwkeys). This may also change in the future. So provide
    a general API solution with properly secured public methods.

    Change-Id: I90ee0dd5fe75545d50ca77dd0fecba86ab23a09e

commit 6a528e1261649a404ee70ea74dda1551f53a30e1
Author: bigrushdog <randall.rushing@gmail.com>
Date:   Wed Aug 2 16:10:54 2017 -0700

    DUI: Left in landscape navbar API [1/3]

    Window manager will let SystemUI know when navbar
    enters or exits the "left in landscape" position.
    We tried to avoid this using orientation listeners
    but that approach proved unreliable leaving Pulse
    in bizarre states when navbar was left in landscape

    Change-Id: Ie67b905755cd20219f08e76232a10fde50ec9b85

commit 7e8cb8b0cfa47d0b1e1105f97905167efafac851
Author: Randall Rushing <randall.rushing@gmail.com>
Date:   Thu Oct 29 05:02:04 2015 -0700

    Pulse: forward port visualizer lock api

    Change-Id: I13c7bbc8f4dc79fa41f11cbab25c1cdd83aed2af

commit 593d60fcea0a2edfebb1ed9ebc21ab69238cb7e7
Author: Randall Rushing <randall.rushing@gmail.com>
Date:   Thu Jan 7 02:41:02 2016 -0800

    statusbar: add screenPinningStateChanged(boolean enabled) api and pipe to navigation bar

    Let activity stack notify statusbar when task locking state changes. This is needed for
    alternate task managers (OmniSwitch, SlimRecents) that implement screen pinning but don't
    interact with the

--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -61,4 +61,8 @@
 
   <java-symbol type="bool" name="config_deviceHasButtonBacklight" />
 
+  <!-- DUI -->
+  <java-symbol type="anim" name="du_app_in" />
+  <java-symbol type="anim" name="du_app_out" />
+
 </resources>
