--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -41,4 +41,7 @@
    <!-- QS detail view scrolling -->
    <dimen name="qs_detail_item_height_twoline">72dp</dimen>
 
+    <!-- QuickSettingHeader scrollbar-->
+    <dimen name="qs_scroller_margin">8dp</dimen>
+
 </resources>
