PiP tile: add toast if pip mode is not avail
Change-Id: Idfa864c7b26f7965afb233ae377b4a520da326a8
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/packages/SystemUI/res/values/colt_strings.xml
+++ b/packages/SystemUI/res/values/colt_strings.xml
@@ -41,6 +41,7 @@
 
     <!-- PiP Tile -->
     <string name="quick_settings_pip_label">PiP</string>
+    <string name="quick_settings_pip_tile_app_na">App does not support PiP</string>
 
     <string name="statusbar_items_title">Statusbar items</string>
 
