--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -73,4 +73,10 @@
   <!-- System fonts -->
   <java-symbol type="array" name="config_fontPackages" />
 
+  <!-- Slim recent app screen-->
+  <java-symbol type="integer" name="config_recentDefaultDur" />
+  <java-symbol type="style" name="Animation.SlimRecentScreen" />
+  <java-symbol type="anim" name="recent_screen_fade_out" />
+  <java-symbol type="anim" name="recent_enter" />
+
 </resources>
