--- a/packages/SystemUI/res/values/screwd_strings.xml
+++ b/packages/SystemUI/res/values/screwd_strings.xml
@@ -81,4 +81,5 @@
     <string name="omnijaws_package_not_available">OmniJaws not available</string>
     <string name="omnijaws_service_last_update">Last update:</string>
 
+    <string name="systemui_tuner_lockscreen_bottom_shortcuts_title">Bottom shortcuts</string>
 </resources>
