Extend dynamic notification bool for ambient notifications
* added a seperate color resource, so this way themer can use diff color (ex: white) for ambient and accent for normal notification.

Change-Id: I65a518d9433558004289826abbf25dc374dd7ec7
Signed-off-by: Adarsh-MR <adarshmr1998@gmail.com>

--- a/core/res/res/values/colt_colors.xml
+++ b/core/res/res/values/colt_colors.xml
@@ -36,4 +36,7 @@
     <color name="generic_theme_primary_dark">#346AC3</color>
     <color name="generic_theme_accent">#3B77DB</color>
 
+    <!-- Ambient Notification icon/text dynamic tint -->
+    <color name="notification_text_default_color">@android:color/notification_text_default_color</color>
+
 </resources>
