Hide button backlight settings on unsupported devices [1/2]
Change-Id: I202361534c95406b54291355fe2f3c44ebabed2e

--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -59,4 +59,6 @@
   <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
   <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
 
+  <java-symbol type="bool" name="config_deviceHasButtonBacklight" />
+
 </resources>
