--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -95,5 +95,8 @@
 
   <!-- Updater snackbar text color -->
   <java-symbol type="color" name="updater_snackbar_text_color" />
-  
+
+  <!-- Whether the device supports Smart Pixels -->
+  <java-symbol type="bool" name="config_enableSmartPixels" />  
+
 </resources>
