--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -62,4 +62,5 @@
     <dimen name="signal_cluster_no_battery_padding">0dp</dimen>
     <dimen name="battery_level_padding_start_no_icon">0dp</dimen>
 
+    <dimen name="screenrecord_hint_size">48dp</dimen>
 </resources>
