Add overlay to config AOD enable default and set to false
break the google default on setting value

Change-Id: I21205d0d6fef214895bc5cca7475eda17723d993

--- a/core/res/res/values/colt_config.xml
+++ b/core/res/res/values/colt_config.xml
@@ -81,4 +81,6 @@
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_enableSmartPixels">false</bool>
 
+    <bool name="config_dozeAlwaysOnDisplayEnabledDefault">false</bool>
+
 </resources>
