--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -106,4 +106,6 @@
   <java-symbol type="bool" name="config_button_brightness_support" />
   <java-symbol type="integer" name="config_button_brightness_default" />
 
+  <java-symbol type="bool" name="config_dozeAlwaysOnDisplayEnabledDefault" />
+
 </resources>
