--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -139,4 +139,6 @@
   <java-symbol type="bool" name="config_haveHigherAspectRatioScreen" />
   <java-symbol type="dimen" name="config_screenAspectRatio" />
 
+  <java-symbol type="bool" name="config_canForceDozeNotifications" />
+
 </resources>
