DUI Pulse: add Automatic albumart base color mode [1/3]
the dui part will also be sure that pulse color has
an acceptable contrast against white and black navbar

Also expose media notification colors values for future improvements

Change-Id: I1bd6b70f2f5ad1f0e6decdac311b1c8e51c9149d

--- a/packages/SystemUI/res/values/colt_strings.xml
+++ b/packages/SystemUI/res/values/colt_strings.xml
@@ -103,5 +103,8 @@
     <string name="battery_level_good_sound" translatable="false">/system/media/audio/ui/GoodBattery.ogg</string>
     <string name="notification_channel_charge_alert">Optimal battery charge level</string>
 
+    <!-- SysUI Tuner -->
+    <string name="systemui_tuner_navbar_title">Stock settings</string>
+
 </resources>
 
