--- a/packages/SystemUI/res/xml/statusbar_items.xml
+++ b/packages/SystemUI/res/xml/statusbar_items.xml
@@ -56,6 +56,7 @@
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="nfc"
+        android:persistent="false"
         android:title="@string/status_bar_nfc" />
 
     <com.android.systemui.tuner.StatusBarSwitch
