dt2s: Add an overlay to control dt2s on lockscreen
set fullScreenDT2S to false to make dt2s working only on top of lock screen
set fullScreenDT2S to true to make dt2s working on top and bottom lock screen

Change-Id: Iffa54ae0889db12de1f85579bd662f9dfdebdfb3

--- a/core/res/res/values/colt_config.xml
+++ b/core/res/res/values/colt_config.xml
@@ -83,6 +83,9 @@
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_enableSmartPixels">false</bool>
 
+    <!-- Enable full screen DT2S in lockscreen -->
+    <bool name="fullScreenDT2S">false</bool>
+
     <bool name="config_dozeAlwaysOnDisplayEnabledDefault">false</bool>
 
     <!-- EdgeGesture service -->
