BatteryService: add turbo power charging support
Inspired by oneplus dash charging commit

https://github.com/AOSPA/android_frameworks_base/commit/0af31949c69f7c306b49ecf2c25579300973fdc9

Change-Id: I5a1b430fe1abaf83d9f2d78f0e1db3a661840b5c

Conflicts:
	core/res/res/values/custom_config.xml
	core/res/res/values/custom_symbols.xml
	packages/SystemUI/res/values/custom_strings.xml
	services/core/java/com/android/server/BatteryService.java

--- a/core/res/res/values/colt_config.xml
+++ b/core/res/res/values/colt_config.xml
@@ -83,4 +83,7 @@
 
     <bool name="config_dozeAlwaysOnDisplayEnabledDefault">false</bool>
 
+    <!-- Whether device has turbo power charging support -->
+    <bool name="config_hasTurboPowerCharger">false</bool>
+
 </resources>
