--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -108,4 +108,7 @@
 
   <java-symbol type="bool" name="config_dozeAlwaysOnDisplayEnabledDefault" />
 
+  <!-- Whether device has turbo power charging support -->
+  <java-symbol type="bool" name="config_hasTurboPowerCharger" />
+
 </resources>
