Expose notification info text color
Change-Id: I07e127c56ffd179bd382390e43e33d26df8e10b8
Signed-off-by: calebcabob <calphonic@gmail.com>

--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -62,4 +62,7 @@
   <java-symbol type="anim" name="du_app_in" />
   <java-symbol type="anim" name="du_app_out" />
 
+  <!-- Notification info -->
+  <java-symbol type="color" name="notification_info_button_text" />
+
 </resources>
