--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -82,4 +82,8 @@
   <java-symbol type="anim" name="recent_screen_fade_out" />
   <java-symbol type="anim" name="recent_enter" />
 
+  <!-- The list of vendor package signatures that should also be considered
+  platform signatures, specifically for use on devices with a vendor partition. -->
+  <java-symbol type="array" name="config_vendorPlatformSignatures" />
+
 </resources>
