Add support for theming notifications
@maxwen Fix notification text when using dark themes

Change-Id: Iea927eb3d95a9e9d07f07f61b2b420c95056dd5c
Signed-off-by: calebcabob <calphonic@gmail.com>

--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -68,4 +68,9 @@
   <!-- Notification info -->
   <java-symbol type="color" name="notification_info_button_text" />
 
+  <!-- Forcefully tint notification icon text -->
+  <java-symbol type="bool" name="config_useDarkBgNotificationIconTextTinting" />
+  <java-symbol type="bool" name="config_useDarkBgNotificationTinting_override" />
+  <java-symbol type="bool" name="config_notificationTinting_override" />
+
 </resources>
