--- a/core/res/res/values/projekt_colors.xml
+++ b/core/res/res/values/projekt_colors.xml
@@ -68,4 +68,7 @@
     <color name="notification_guts_bg_color">#eeeeee</color>
     <color name="notification_snooze_text">#dd000000</color>
 
+    <!-- App permission tint -->
+    <color name="app_permission_icon_tint">@android:color/black</color>
+
 </resources>
