PMS: Support loading overlays from system
Some devices will forcefully install overlays to another path such as
/system/overlay or restrict the ability to scan the original path of
/vendor/overlay.

Allow overriding the behavior of PMS when scanning overlays, by
determing whether the overlays are installed in /system/overlay instead

Change-Id: Ie6e7d0cd05baa2402cd93c7224c003529e03e4eb
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/core/res/res/values/colt_config.xml
+++ b/core/res/res/values/colt_config.xml
@@ -74,4 +74,7 @@
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_enableSmartPixels">false</bool>
 
+    <!-- Whether the device requires overlays to be in /system/overlay -->
+    <bool name="config_hasSystemOverlayPath">false</bool>
+
 </resources>
