--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -99,4 +99,7 @@
   <!-- Whether the device supports Smart Pixels -->
   <java-symbol type="bool" name="config_enableSmartPixels" />  
 
+  <!-- Whether the device requires overlays to be in /system/overlay -->
+  <java-symbol type="bool" name="config_hasSystemOverlayPath" />
+
 </resources>
