--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -57,7 +57,11 @@
     <dimen name="qs_panel_footer_height">48dp</dimen>
 
     <!-- Status bar clock -->
+    <dimen name="status_bar_left_clock_start_padding_normal">2dp</dimen>
+    <dimen name="status_bar_left_clock_start_padding_more">3dp</dimen>
+    <dimen name="status_bar_left_clock_start_padding_max">4dp</dimen>
     <dimen name="status_bar_left_clock_end_padding">5dp</dimen>
+    <dimen name="status_bar_logo_end_padding">3dp</dimen>
 
     <!-- Battery Style -->
     <dimen name="signal_cluster_no_battery_padding">0dp</dimen>
