--- a/packages/SystemUI/res/values/colt_strings.xml
+++ b/packages/SystemUI/res/values/colt_strings.xml
@@ -172,5 +172,9 @@
     <string name="navbar_editor_title">Editor</string>
     <string name="navbar_editor_summary">Configure navigaton bar</string>
 
+    <!-- SmartPixels QS Tile -->
+    <string name="quick_settings_smart_pixels">Smart Pixels</string>
+    <string name="quick_settings_smart_pixels_on_power_save">Auto-enabled Smart Pixels</string>
+
 </resources>
 
