--- a/core/res/res/values/colt_colors.xml
+++ b/core/res/res/values/colt_colors.xml
@@ -28,4 +28,7 @@
     <!-- Updater snackbar text color -->
     <color name="updater_snackbar_text_color">@android:color/white</color>
 
+    <!-- Two target preference vertical divider color -->
+    <color name="list_divider_dark">#64000000</color>
+
 </resources>
