--- a/core/res/res/values/colt_config.xml
+++ b/core/res/res/values/colt_config.xml
@@ -41,7 +41,7 @@
          config to 7. -->
     <integer name="config_deviceHardwareKeys">64</integer>
 
-    <bool name="config_button_brightness_support">false</bool>
+    <bool name="config_button_brightness_support">true</bool>
     <integer name="config_button_brightness_default">128</integer>
 
     <!-- The duration (in milliseconds) of recent app screen animation. -->
