--- a/core/res/res/values/projekt_colors.xml
+++ b/core/res/res/values/projekt_colors.xml
@@ -30,7 +30,7 @@
     <color name="toast_text_color">@color/primary_text_default_material_light</color>
 
     <!-- Resolver -->
-    <color name="resolver_list_bg">@color/white</color>
+    <color name="chooser_service_row_background_color">@color/white</color>
 
     <!-- Immersive cling -->
     <color name="immersive_cling_bg_color">@color/accent_device_default_light</color>
