--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -122,4 +122,20 @@
   <java-symbol type="color" name="generic_theme_primary_dark" />
   <java-symbol type="color" name="generic_theme_accent" />
 
+  <!-- Custom Analog clock -->
+  <java-symbol type="drawable" name="custom_clock_dial" />
+  <java-symbol type="drawable" name="custom_clock_dial_ambient" />
+  <java-symbol type="drawable" name="custom_clock_hand_hour" />
+  <java-symbol type="drawable" name="custom_clock_hand_minute" />
+  <java-symbol type="color" name="analog_clock_border_color" />
+  <java-symbol type="color" name="analog_clock_face_color" />
+  <java-symbol type="color" name="analog_clock_hand_hour_color" />
+  <java-symbol type="color" name="analog_clock_hand_minute_color" />
+
+  <!-- DeadPool Analog clock -->
+  <java-symbol type="drawable" name="deadpool_clock_dial" />
+  <java-symbol type="drawable" name="deadpool_clock_dial_ambient" />
+  <java-symbol type="drawable" name="deadpool_clock_hand_hour" />
+  <java-symbol type="drawable" name="deadpool_clock_hand_minute" />
+
 </resources>
