--- a/core/res/res/values/projekt_colors.xml
+++ b/core/res/res/values/projekt_colors.xml
@@ -19,6 +19,15 @@
     <!-- Notification icon/text dynamic tint -->
     <color name="notification_text_default_color">@android:color/notification_default_color</color>
 
+    <!-- Custom Analog clock -->
+    <color name="analog_clock_border_color">#212121</color>
+    <color name="analog_clock_face_color">#FFFFFF</color>
+    <color name="analog_clock_hand_hour_color">@*android:color/accent_device_default_light</color>
+    <color name="analog_clock_hand_minute_color">#212121</color>
+
+    <!-- Settings icon tint color -->
+    <color name="settings_icon_tint_color">#737373</color>
+
     <!-- Ambient Notification icon/text dynamic tint -->
     <color name="notification_ambient_default_color">@android:color/notification_text_default_color</color>
 
