Make Rounded Corner Overlay Based
Let maintainer's decide what to do.

Overlay to add in DT -

    <!-- Xtended Rounded Corner Overlay -->
    <dimen name="rounded_corner_colt_radius">8.0dip</dimen>
    <dimen name="rounded_corner_radius">10.0dip</dimen>
    <dimen name="notification_shadow_radius">15.0dip</dimen>

--- a/packages/SystemUI/res/drawable/notification_guts_bg.xml
+++ b/packages/SystemUI/res/drawable/notification_guts_bg.xml
@@ -17,6 +17,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/notification_guts_bg_color" />
-    <!--Like Androip P-->
-    <corners android:radius="@*com.android.systemui:dimen/recents_task_view_rounded_corners_radius" />
+    <!--Androip P-ify-->
+    <corners android:radius="@*com.android.systemui:dimen/rounded_corner_colt_radius" />
 </shape>
