--- a/core/res/res/values/colt_colors.xml
+++ b/core/res/res/values/colt_colors.xml
@@ -31,4 +31,9 @@
     <!-- Two target preference vertical divider color -->
     <color name="list_divider_dark">#64000000</color>
 
+    <!-- Generic colors -->
+    <color name="generic_theme_primary">#4285f4</color>
+    <color name="generic_theme_primary_dark">#346AC3</color>
+    <color name="generic_theme_accent">#3B77DB</color>
+
 </resources>
