--- a/packages/SystemUI/res/values/colt_dimens.xml
+++ b/packages/SystemUI/res/values/colt_dimens.xml
@@ -13,6 +13,10 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources>
+
+    <!-- Big clock dozing -->
+    <dimen name="dozing_big_clock_padding" format="float">0.38</dimen>
+
     <!-- Network traffic monitor -->
     <dimen name="net_traffic_single_text_size">12dp</dimen>
     <dimen name="net_traffic_multi_text_size">8dp</dimen>
