--- a/packages/SystemUI/res/values/colt_colors.xml
+++ b/packages/SystemUI/res/values/colt_colors.xml
@@ -14,7 +14,6 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-
 <resources>
     <!-- Floating action button -->
     <color name="fab_color">@*android:color/accent_device_default_light</color>
@@ -48,6 +47,9 @@
     <color name="quick_settings_theme_tile_blue_grey">#607D8B</color>
     <color name="quick_settings_theme_tile_black">#000000</color>
     <color name="quick_settings_theme_tile_white">#ffffff</color>
+
+    <!-- Power menu wallpaper tint off color -->
+    <color name="power_menu_wallpaper_tint_off_color">#80202020</color>
 
     <!-- Navbar icon Colors -->
     <color name="icon_color_back">@android:color/white</color>
