--- a/core/res/res/values/colt_strings.xml
+++ b/core/res/res/values/colt_strings.xml
@@ -44,4 +44,8 @@
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Long press power button to interact</string>
 
+    <string name="custom_clock_styles" translatable="false">
+        digital,digital_bold,sammy,sammy_bold,analog
+    </string>
+
 </resources>
